Implement custom file extension